--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <a href="https://www.instagram.com/shoirakan" target="_blank" title="Instagram"><i class="fab fa-instagram social-icon-hud"></i></a>
                     <a href="https://github.com/helyio-dev" target="_blank" title="GitHub"><i class="fab fa-github social-icon-hud"></i></a>
                     <a href="https://tipeee.com/404" target="_blank" title="Tipeee"><i class="fas fa-mug-hot social-icon-hud"></i></a>
+                    <a href="https://steamcommunity.com/id/helyio/" target="_blank" title="Steam"><i class="fab fa-steam social-icon-hud"></i></a>
+                    <a href="https://www.youtube.com/channel/UCtCbCEWLLApOVC5gdtUKH9g" target="_blank" title="YouTube"><i class="fab fa-youtube social-icon-hud"></i></a>
+                    <a href="https://www.twitch.tv/helyio_" target="_blank" title="Twitch"><i class="fab fa-twitch social-icon-hud"></i></a>
                 </div>
             </div>
         </header>
